Fix z-index conflict with ckeditor

--- a/app/assets/stylesheets/admin/base.css.scss
+++ b/app/assets/stylesheets/admin/base.css.scss
@@ -79,7 +79,7 @@ $iconRedSpritePath: 'glyphicons-halflings-red.png';
 }
 
 .fixed-breadcrumbs {
-  z-index: 1; // Make the drop-down header stuff visible
+  z-index: 5;
   margin-top: 40px;
   @include box-shadow(0 2px 6px rgba(0,0,0,.2));
 }
